--- a/Final/product.css
+++ b/Final/product.css
@@ -18,36 +18,36 @@
     background-image: url(product/foam3.jpg);
 }
 
-.theia-1 {
-    background-image: url(assets/images/ITEMS/Abstract-Theia-Rug.jpg);
+.cleanse-1 {
+    background-image: url(product/clenser1.jpg);
 }
 
-.theia-2 {
-    background-image: url(assets/images/ITEMS/Abstract-Theia-Rug-2.jpg);
+.cleanse-2 {
+    background-image: url(product/clenser.jpg);
 }
 
-.theia-3 {
-    background-image: url(assets/images/ITEMS/Abstract-Theia-Rug-3.jpg);
+.cleanse-3 {
+    background-image: url(product/cleanse.png);
 }
 
-.zigzag-1 {
-    background-image: url(assets/images/ITEMS/colorful-zigzag-rug.jpg);
+.moiz-1 {
+    background-image: url(product/moiz1.png);
 }
 
-.zigzag-2 {
-    background-image: url(assets/images/ITEMS/colorful-zigzag-rug-2.jpg);
+.moiz-2 {
+    background-image: url(product/moiz2.png);
 }
 
-.floral-1 {
-    background-image: url(assets/images/ITEMS/floral-rug.jpg);
+.moiz-1 {
+    background-image: url(product/kit5.jpg);
 }
 
 .floral-2 {
-    background-image: url(assets/images/ITEMS/floral-rug-3.jpg);
+    background-image: url(product/kit2.jpg);
 }
 
 .floral-3 {
-    background-image: url(assets/images/ITEMS/floral-rug-2.jpg);
+    background-image: url(product/kit4.png);
 }
 
 .pink-1 {
