--- a/Final/style.css
+++ b/Final/style.css
@@ -14,7 +14,7 @@ a {
     color: inherit;
     text-decoration: none;
   }
-  
+
 /* TYPE */
   h1.display-3.text-warning
 
@@ -151,6 +151,10 @@ width: 30%;
 .container{
     margin-top: 50px;
 }
+
+.img.img-fluid:hover {
+    opacity: 50%;
+}
 /* CARD */
 
 #demo1 {
@@ -160,6 +164,7 @@ margin-top: 150px;
 .card {
     overflow: hidden;
   }
+
   
   .card-body {
     overflow: hidden;
@@ -175,6 +180,7 @@ margin-top: 150px;
   
   .card:hover .card-img-top {
     background-size: 120% 120%;
+    
   }
   
   img {
@@ -202,10 +208,7 @@ margin-top: 150px;
   color: white;
   }
   
-  
-  hr {
-    border-top: 1px solid #6FBF83;
-  }
+ 
 
 /*--- Fixed Video Background iOS/Mobile Style--*/
 .video-wrap {
