--- a/Final/product.css
+++ b/Final/product.css
@@ -27,7 +27,7 @@
 }
 
 .cleanse-3 {
-    background-image: url(product/cleanse.png);
+    background-image: url(product/cleanser3.png);
 }
 
 .moiz-1 {
