--- a/Final/product.css
+++ b/Final/product.css
@@ -38,20 +38,20 @@
     background-image: url(product/moiz2.png);
 }
 
-.moiz-1 {
+.moiz-3 {
+    background-image: url(product/);
+}
+
+.kit-1 {
     background-image: url(product/kit5.jpg);
 }
 
-.floral-2 {
+.kit-2 {
     background-image: url(product/kit2.jpg);
 }
 
-.floral-3 {
-    background-image: url(product/kit4.png);
-}
-
-.pink-1 {
-    background-image: url(assets/images/ITEMS/pink-rug-3.jpg);
+.kit-3 {
+    background-image: url(product/kit3.jpg);
 }
 
 .pink-2 {
