--- a/Final/product.css
+++ b/Final/product.css
@@ -47,11 +47,11 @@
 }
 
 .kit-2 {
-    background-image: url(product/kit2.jpg);
+    background-image: url(product/kit2.png);
 }
 
 .kit-3 {
-    background-image: url(product/kit3.jpg);
+    background-image: url(product/kit3.jpeg);
 }
 
 .pink-2 {
