--- a/Final/style.css
+++ b/Final/style.css
@@ -3,7 +3,7 @@
 
 body {
   overflow-x: hidden;  
-  background-color: rgb(224, 212, 212);
+  background-color: #e0d4d4;
 }
 
 
@@ -164,7 +164,7 @@ width: 30%;
 /* JUMBOTRON */
 
 .jumbotron {
-    background-image: url(jumbastron.png);
+    background-image: url(Jumbotron.png);
     background-position: center;
     background-attachment: fixed;
     background-repeat: no-repeat;
@@ -174,6 +174,15 @@ width: 30%;
 
   .jumbotron-1 {
     background-image: url(https://media.giphy.com/media/CUQnDRHmaxfCEDXcTx/giphy.gif);
+    background-position: center;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: cover;
+   height: 600px;
+  }
+
+  .jumbotron-3{
+    background-image: url(jumbatron-3.png);
     background-position: center;
     background-attachment: fixed;
     background-repeat: no-repeat;
@@ -306,4 +315,3 @@ left: 8%;
       margin-bottom: 20px;
     }
   }
-
