--- a/Final/style.css
+++ b/Final/style.css
@@ -165,7 +165,7 @@ width: 30%;
 /* JUMBOTRON */
 
 .jumbotron {
-    background-image: url(jum);
+    background-image: url(jumbotron-2.png);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
